--- a/FlashcardApp/FlashcardApp/AddCardPage.xaml
+++ b/FlashcardApp/FlashcardApp/AddCardPage.xaml
@@ -44,8 +44,7 @@
             <Frame x:Name="CardFrontTitleFrame" 
                    BorderColor="DarkSlateGray"
                    Margin="10"
-                   WidthRequest="2"
-                   HasShadow="False">
+                   WidthRequest="2">
                 
                 <Label x:Name="CardFrontTitle"
                        Text="{Binding}"
@@ -62,8 +61,7 @@
             <Frame x:Name="CardBackTitleFrame" 
                    BorderColor="DarkSlateGray"
                    Margin="10"
-                   WidthRequest="2"
-                   HasShadow="False">
+                   WidthRequest="2">
                 
                 <Label x:Name="CardBackTitle"
                        Text="{Binding}"
